--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,5 +10,13 @@
 		Best of the year by: [[${name}]]
 	</h1>
 	
+	<div style="text-align: center;">
+		<a href="/movies">See best movies titles<a/>
+		
+		</br>
+		
+		<a href="/songs">See best songs titles</a>
+	</div>
+	
 </body>
 </html>
