--- a/src/main/resources/templates/mediaDetail.html
+++ b/src/main/resources/templates/mediaDetail.html
@@ -14,9 +14,9 @@
 				align-items: center; 
 				justify-content: center;
 				">		
-		<h3>		
-			[[${songs}]]
-		</h3>
+		<h1>		
+			[[${result}]]
+		</h1>
 	</div>
 </body>
 </html>
