--- a/src/main/resources/templates/movies.html
+++ b/src/main/resources/templates/movies.html
@@ -4,11 +4,21 @@
 <meta charset="UTF-8">
 <title>Insert title here</title>
 </head>
-<body>
 
-	<h5 style="text-align: center;">
-		[[${movies}]]
-	</h5>
+<body style="
+			overflow: hidden;
+			">
+			
+	<div style="
+				height: 100vh; 
+				display: flex; 
+				align-items: center; 
+				justify-content: center;
+				">		
+		<h3>		
+			[[${movies}]]
+		</h3>
+	</div>
 
 </body>
 </html>
